Fix contrast issues on main page
Fixes #285

--- a/_sass/components/_header-hero.scss
+++ b/_sass/components/_header-hero.scss
@@ -35,7 +35,7 @@
 
     .card {
         background-color: $white;
-        color: $teal;
+        color: $teal-dark-wcag;
 
         .btn {
             background-color: $teal;
